# bess-arbitrage-playground

./: README.md  battery-simulator.ipynb  battery_simulator.py  playground.ipynb  pyproject.toml
data/: 2025.json
