[project]
name = "bess-arbitrage-playground"
version = "0.1.0"
description = "A Python-based battery energy storage simulator that optimizes charging/discharging schedules for home battery systems using linear programming and day-ahead electricity pricing data. Maximizes arbitrage profits while accounting for battery wear and cycle costs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "altair>=5.0.0",
    "vega-datasets>=0.9.0",
    "black>=25.9.0",
    "pulp>=3.3.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
